+ CSS fixes for small displays, the login window is scrollable, so it will always be visible, even when the keyboard is visible.

--- a/wp-content/plugins/optimize-wordpress/assets/css/popup-login.css
+++ b/wp-content/plugins/optimize-wordpress/assets/css/popup-login.css
@@ -52,41 +52,51 @@ body.no-scroll { overflow: hidden; }
   #popup-login-wrapper .popup-login-window { position: fixed; left: 0; top: 0; width: 100%; height: 440px; margin-left: 0; margin-top: 0; background: #fff; padding: 20px; border-radius: 0 0 10px 10px; box-sizing: border-box; }
   /* line 190, popup-login.scss */
   #popup-login-wrapper .popup-login-window .popup-login-section label { display: none; } }
-@media (max-width: 480px) { /* line 199, popup-login.scss */
-  #popup-login-wrapper .popup-login-window { padding: 10px 10px 0 10px; border-radius: 0 0 5px 5px; height: 390px; }
-  /* line 204, popup-login.scss */
+@media (max-width: 480px) { /* line 198, popup-login.scss */
+  #popup-login-wrapper { overflow: auto; }
+  /* line 200, popup-login.scss */
+  #popup-login-wrapper .popup-login-window { position: absolute; padding: 10px 10px 0 10px; border-radius: 0 0 5px 5px; height: 390px; }
+  /* line 206, popup-login.scss */
   #popup-login-wrapper .popup-login-window .popup-login-title { font-size: 26px; line-height: 30px; height: 30px; text-align: center; }
-  /* line 211, popup-login.scss */
+  /* line 213, popup-login.scss */
   #popup-login-wrapper .popup-login-window .popup-login-section { width: 100%; margin: 0; }
-  /* line 214, popup-login.scss */
+  /* line 216, popup-login.scss */
   #popup-login-wrapper .popup-login-window .popup-login-section .input { padding: 8px 14px; }
-  /* line 219, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-submit input[type="submit"] { padding: 8px 14px; margin-bottom: 5px; } }
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) { /* line 240, popup-login.scss */
-  #popup-login-wrapper .popup-login-window { height: 100%; margin-top: 0; top: 0; box-sizing: border-box; }
-  /* line 246, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-section label { display: none; }
-  /* line 250, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-submit input[type="submit"] { position: absolute; bottom: -63px; right: -5px; padding: 12px 16px; z-index: 9; } }
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) { /* line 266, popup-login.scss */
-  #popup-login-wrapper .popup-login-window { height: 100%; margin-top: 0; top: 0; box-sizing: border-box; }
-  /* line 272, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-section label { display: none; }
+  /* line 221, popup-login.scss */
+  #popup-login-wrapper .popup-login-window .popup-login-submit input[type="submit"] { padding: 8px 14px; margin-bottom: 5px; }
+  /* line 226, popup-login.scss */
+  #popup-login-wrapper .popup-login-window .popup-login-error { bottom: 55px; } }
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) { /* line 246, popup-login.scss */
+  #popup-login-wrapper { overflow: auto; }
+  /* line 248, popup-login.scss */
+  #popup-login-wrapper .popup-login-window { position: absolute; margin-top: 0; top: 0; box-sizing: border-box; }
+  /* line 254, popup-login.scss */
+  #popup-login-wrapper .popup-login-window .popup-login-section label { display: none; } }
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) { /* line 267, popup-login.scss */
+  #popup-login-wrapper { overflow: auto; }
+  /* line 269, popup-login.scss */
+  #popup-login-wrapper .popup-login-window { position: absolute; margin-top: 0; top: 0; box-sizing: border-box; height: 440px; }
   /* line 276, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-submit input[type="submit"] { position: absolute; bottom: -63px; right: -5px; padding: 12px 16px; z-index: 9; } }
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) { /* line 292, popup-login.scss */
-  #popup-login-wrapper .popup-login-window { height: 100%; border-radius: 0; }
-  /* line 296, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-options { bottom: 10px; }
+  #popup-login-wrapper .popup-login-window .popup-login-section label { display: none; }
+  /* line 280, popup-login.scss */
+  #popup-login-wrapper .popup-login-window .popup-login-error { bottom: 35px; } }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) { /* line 293, popup-login.scss */
+  #popup-login-wrapper { overflow: auto; }
+  /* line 295, popup-login.scss */
+  #popup-login-wrapper .popup-login-window { position: absolute; height: 400px; border-radius: 0; }
   /* line 300, popup-login.scss */
+  #popup-login-wrapper .popup-login-window .popup-login-options { bottom: 10px; }
+  /* line 304, popup-login.scss */
   #popup-login-wrapper .popup-login-window .popup-login-section { margin: 0; }
-  /* line 303, popup-login.scss */
+  /* line 307, popup-login.scss */
   #popup-login-wrapper .popup-login-window .popup-login-section .input { padding: 8px 14px; }
-  /* line 306, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-submit input[type="submit"] { position: absolute; bottom: -63px; right: -5px; padding: 12px 16px; z-index: 9; }
-  /* line 313, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-error { bottom: 7px; border-radius: 2px; } }
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) { /* line 327, popup-login.scss */
-  #popup-login-wrapper .popup-login-window .popup-login-section { width: 49%; }
+  /* line 310, popup-login.scss */
+  #popup-login-wrapper .popup-login-window .popup-login-error { bottom: 35px; } }
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) { /* line 323, popup-login.scss */
+  #popup-login-wrapper { overflow: auto; }
+  /* line 325, popup-login.scss */
+  #popup-login-wrapper .popup-login-window { position: absolute; height: 350px; border-radius: 0; }
   /* line 330, popup-login.scss */
+  #popup-login-wrapper .popup-login-window .popup-login-section { width: 49%; }
+  /* line 334, popup-login.scss */
   #popup-login-wrapper .popup-login-window .popup-login-submit input[type="submit"] { bottom: -54px; } }
